@@ -156,7 +156,9 @@ The default value is 1.
 Used for Moab scheduled jobs only. Controls how long job should wait
 in seconds for loading the user's environment before attempting to 
 load it from a cache file. Applies when the srun or sbatch 
-\fI--get-user-env\fR option is used. Default value is 2 seconds.
+\fI--get-user-env\fR option is used. If set to 0 then always load 
+the user's environment from the cache file.
+The default value is 2 seconds.
 
 .TP
 \fBHeartbeatInterval\fR
